# Dispatch_Backend

./: .gitignore  Shotgun-Backend-HLD.md  render.yaml
app-under-test/: index.html  payment.js
shotgun/backend/: .env.example  .env.prod.example  pyproject.toml  pytest.ini  requirements.txt
shotgun/backend/app/: __init__.py  auth.py  config.py  db.py  events.py  main.py  models.py  notifications.py  orchestrator.py  recorder.py  storage.py  store.py
shotgun/backend/app/clients/: __init__.py  agentphone.py  github_app.py  github_pr.py  kane.py  kane_review.py  kane_smoke.py  kiro.py
shotgun/backend/app/intake/: __init__.py  kafka_consumer.py  normalize.py
shotgun/backend/app/routes/: __init__.py  github.py  health.py  incidents.py  me.py  stream.py  webhooks_github.py  webhooks_loop.py
shotgun/backend/examples/: checkout-500.json
shotgun/backend/flows/: checkout_test.md
shotgun/backend/migrations/: 001_init.sql
shotgun/backend/scripts/: auto_approve.py  enable_pages.py  incident.py  kiro_agent.py  run_e2e.py  test_api.py  validate.py
shotgun/backend/tests/: __init__.py  conftest.py  fakes.py  test_e2e_live.py  test_kane_client.py  test_orchestrator_integration.py  test_review_and_recorder.py  test_smoke.py
shotgun/frontend/: package-lock.json  package.json
shotgun/frontend-new/: package-lock.json  package.json
shotgun/frontend-new/src/app/: globals.css  layout.tsx  page.tsx
shotgun/frontend-new/src/fonts/: fonts.ts
shotgun/frontend/app/: globals.css  layout.tsx  page.tsx
shotgun/frontend/lib/: firebase.ts  useAuth.tsx  useIncidentStream.ts
(+33 files in other folders)
