[project]
name = "shotgun-backend"
version = "0.1.0"
description = "Shotgun / Dispatch — on-call copilot that diagnoses, fixes, and proves the fix"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "PyGithub>=2.3",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "aiokafka>=0.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",  # for TestClient
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
